src/tests/cases/snapshots/excise__tests__cases__ui__delete_folder_no_confirmation-5.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/delete_folder_no_confirmation  ◆ COMPLETE                                                                                                                          
 allocated ##.#K   reclaim ##.#K   apparent 12.0K   4 entries                                                                                                                                 
──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ STORAGE MAP ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ INSPECT ─────────────────────────┐
│┌────────────────────────────────────────────────────────────────────────────────────────────────────┬──────────────────────────────────────────────────┤│subfolder1                        │
││                                                                                                    │██████████████████████████████████████████████████││◆ COMPLETE · directory            │
││                                                                                                    │██████████████████████████████████████████████████││allocated #.#K                    │
││                                                                                                    │██████████████████████████████████████████████████││reclaim   #.#K                    │
││                                                                                                    │██████████████████████████████████████████████████││apparent 4.0K · entries 1         │
││                                                                                                    │██████████████████████████████████████████████████││identity  Inod[...]ber: ######## }│
││                                                                                                    │██████████████████████████████████████████████████││links     # · [...]   materialized│
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                               file2                                                │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                             4.0K (33%)                                             │██████████████████████████████████████████████████││                                  │
││                                                      ╔ ! PERMANENT DIRECTORY DELETION ════════════════════════════════════════════╗███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ║/tmp/excise_tests/delete_folder_no_confirmation/subfolder1                  ║███████████████████││                                  │
││                                                      ║identity Inode { device_id: ########, inode_number: ######## }              ║███████████████████││                                  │
││                                                      ║2 planned entries · 4.0K logical                                            ║███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ║This cannot be undone. New or changed entries are skipped.                  ║███████████████████││                                  │
││                                                      ║SESSION-ONLY REDUCED GUARDRAILS ACTIVE                                      ║endants)███████████││                                  │
││                                                      ║Press y to arm permanent deletion.                                          ║███████████████████││                                  │
│├──────────────────────────────────────────────────────║[Esc] cancel                                                                ║███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ╚════════════════════════════════════════════════════════════════════════════╝███████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                               file3                                                │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                             4.0K (33%)                                             │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
└┴────────────────────────────────────────────────────────────────────────────────────────────────────┴──────────────────────────────────────────────────┘└──────────────────────────────────┘
 / filter  arrows/Vim move  Enter open/rescan  Backspace delete  ? help  mem 96.0M/384.0M                                                                                                     
Excise · ! REDUCED DELETE GUARD · REDUCED MOTION
