src/tests/cases/snapshots/excise__tests__cases__ui__delete_folder_no_confirmation-6.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/delete_folder_no_confirmation  ◆ COMPLETE                                                                                                                          
 allocated ##.#K   reclaim ##.#K   apparent 12.0K   4 entries                                                                                                                                 
──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ STORAGE MAP ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ INSPECT ─────────────────────────┐
│┌────────────────────────────────────────────────────────────────────────────────────────────────────┬──────────────────────────────────────────────────┤│subfolder1                        │
││                                                                                                    │██████████████████████████████████████████████████││◆ COMPLETE · directory            │
││                                                                                                    │██████████████████████████████████████████████████││allocated #.#K                    │
││                                                                                                    │██████████████████████████████████████████████████││reclaim   #.#K                    │
││                                                                                                    │██████████████████████████████████████████████████││apparent 4.0K · entries 1         │
││                                                                                                    │██████████████████████████████████████████████████││identity  Inod[...]ber: ######## }│
││                                                                                                    │██████████████████████████████████████████████████││links     # · [...]   materialized│
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                               file2                                                │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                             4.0K (33%)                                             │██████████████████████████████████████████████████││                                  │
││                                                      ╔ ! PERMANENT DELETION ACTIVE ═══════════════════════════════════════════════╗███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ║Executing 2 planned identities.                                             ║███████████████████││                                  │
││                                                      ║Every entry is revalidated immediately before mutation.                     ║███████████████████││                                  │
││                                                      ║New and changed entries are never swept.                                    ║███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ║[Esc/q] interruption options                                                ║███████████████████││                                  │
││                                                      ║                                                                            ║endants)███████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
│├──────────────────────────────────────────────────────║                                                                            ║███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ╚════════════════════════════════════════════════════════════════════════════╝███████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                               file3                                                │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                             4.0K (33%)                                             │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
││                                                                                                    │██████████████████████████████████████████████████││                                  │
└┴────────────────────────────────────────────────────────────────────────────────────────────────────┴──────────────────────────────────────────────────┘└──────────────────────────────────┘
 / filter  arrows/Vim move  Enter open/rescan  Backspace delete  ? help  mem 96.0M/384.0M                                                                                                     
Excise · ! REDUCED DELETE GUARD · REDUCED MOTION
